css/sass/partials/_basic_structure.scss
@charset "UTF-8";
@import "variables";

html, body { 
  height:100%;
  font-family: Arial, Verdana, Helvetica sans-serif;
  font-size: 24px
}

.main-container {
  padding: 30px 0 20px;
}

.main article h1 {
  font-size: 2em;
}

.main aside {
  color: $aside_background_color;
  padding: 0px 5% 10px;
}

.footer-container footer {
  color: $aside_background_color;
  padding: 20px 0;
}

.row-group {
  padding: 2% 0 10px;
}

img {
  width: 100%;
  height: auto;
}

.col-centered {
  float: none;
  margin: 0 auto;
}

.address {
  color: $map_background_color;
}

td {
  padding: 0 5px;
}

a {
  color: $map_background_color;
  text-decoration: underline;
}

.btn {
  color: $text_special_color;
  border-color: $text_border_color;
}

a.btn {
  text-decoration: none;
}

a img {
  padding: 0;
  margin: 0;
}

